fix absolute height on mobile

--- a/src/components/carousel/style.scss
+++ b/src/components/carousel/style.scss
@@ -13,6 +13,7 @@
   .movie-slide {
     width: 100%;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     @include utils.flexCenterVertical;
     @include utils.flexCenterHorizontal;
     position: relative;
