--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -4,10 +4,10 @@
 
   &,.movie-section {
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
   }
 
   .movie-section {
-    height: 100vh;
     scroll-snap-align: center;
   }
 }
